reset national_id

--- a/school_webservices_bced_personne/views/res_users_view.xml
+++ b/school_webservices_bced_personne/views/res_users_view.xml
@@ -1,4 +1,5 @@
-# -*- encoding: utf-8 -*-
+<?xml version="1.0" encoding="utf-8" ?>
+<!--
 ##############################################################################
 #
 #    Copyright (c) 2023 ito-invest.lu
@@ -18,25 +19,17 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 ##############################################################################
-{
-    'name': 'School webservices BCED Personne',
-    'version': '0.1',
-    'license': 'AGPL-3',
-    'author': 'ito-invest (Jerome Sonnet)',
-    'website': '',
-    'category': 'School Management',
-    'depends': ['school_webservices'],
-    'init_xml': [],
-    'data': [
-        'school_webservices_data.xml',
-        'views/res_users_view.xml',
-        'security/ir.model.access.csv',
-    ],
-    'demo_xml': [],
-    'description': '''
-        This modules manage access to e-Paysage webservices.
-    ''',
-    'active': False,
-    'installable': True,
-    'application': True,
-}
+-->
+<odoo>
+    <record id="view_res_users_form_webservices" model="ir.ui.view">
+            <field name="name">view.res.users.form.webservices</field>
+            <field name="model">res.users</field>
+            <field name="inherit_id" ref="base.view_users_form" />
+            <field name="priority">110</field>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='partner_id']" position="before">
+                    <field name="national_id"/>
+                </xpath>
+            </field>
+        </record>
+</odoo>
