--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -76,7 +76,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
-                <button name="action_bced_personne_view" type="object"
+                <button name="%(action_bced_personne_view)d" type="action"
                         class="oe_stat_button" icon="fa-address-book">BCED</button>
             </xpath>
         </field>
