--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -77,7 +77,7 @@
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button name="%(action_bced_personne_view)d" type="action"
-                        class="oe_stat_button" icon="fa-address-book">BCED</button>
+                        class="oe_stat_button" icon="fa-address-book" groups="school_webservices_bced_personne.bced_personne">BCED</button>
             </xpath>
         </field>
     </record>
