--- a/school_webservices/views/configuration_view.xml
+++ b/school_webservices/views/configuration_view.xml
@@ -21,6 +21,34 @@
 ##############################################################################
 -->
 <odoo>
+    <!-- Webservice Form View -->
+    <record id="view_webservice_form" model="ir.ui.view">
+        <field name="name">school.webservice.form</field>
+        <field name="model">school.webservice</field>
+        <field eval="8" name="priority" />
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="name" />
+                        <field name="wsdl_url" />
+                        <field name="wsa_action"/>
+                        <field name="wsa_to"/>
+                    </group>
+                    <notebook>
+                        <page string="History">
+                            <group>
+                                <button type="object" icon="fa-folder-open" name="action_update_history" string="Refresh" />
+                                <field name="last_send" widget="ace" />
+                                <field name="last_received" widget="ace" />
+                            </group>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
     <!-- Webservice List View -->
     <record id="view_webservice_list" model="ir.ui.view">
         <field name="name">school.webservice.tree</field>
@@ -50,10 +78,11 @@
         <field name="view_id" ref="view_webservice_list" />
         <field name="act_window_id" ref="action_webservice_list" />
     </record>
-    
+   
     <record id="action_webservice_form_view1" model="ir.actions.act_window.view">
         <field name="sequence" eval="5" />
         <field name="view_mode">form</field>
+        <field name="view_id" ref="view_webservice_form" />
         <field name="act_window_id" ref="action_webservice_list" />
     </record>
     
