--- a/school_webservices/views/configuration_view.xml
+++ b/school_webservices/views/configuration_view.xml
@@ -40,8 +40,8 @@
                             <h3>History</h3>
                             <button type="object" icon="fa-folder-open" name="action_update_history" string="Refresh" />
                             <group>
-                                <field name="last_send" widget="ace" class="oe_inline"/>
-                                <field name="last_response" widget="ace" class="oe_inline"/>
+                                <field name="last_response" widget="ace" />
+                                <field name="last_send" widget="ace" />
                             </group>
                         </page>
                     </notebook>
