--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -39,6 +39,7 @@
                             </div>
                         </div>
                     </div>
+                    <field name="state" invisible="1"/>
                     <div attrs="{'invisible': [('state', '!=', 'bced')]}">
                         <div class="alert alert-info" role="alert">
                             <strong>Great!</strong> This student has a record in BCED.
@@ -65,7 +66,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="bced_personne_view"/>
-        <field name="context">{}</field>
+        <field name="context">{ 'default_student_id' : active_id }</field>
         <field name="target">new</field>
     </record>
     
