swithc to searchName

--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -46,10 +46,11 @@
                     <div attrs="{'invisible': [('state', '!=', 'candidate_bced')]}">
                         <field name="candidate_person_ids">
                             <tree>
-                                <field name="firstname"/>
                                 <field name="lastname"/>
+                                <field name="firstname"/>
                                 <field name="birthdate"/>
                                 <field name="niss"/>
+                                <button type="object" icon="fa-folder-open" name="action_use_person" string="" />
                             </tree>
                         </field>
                     </div>
