--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -42,6 +42,7 @@
                             </div>
                         </div>
                     </div>
+                    <button type="object" icon="fa-search" name="action_retrieve_bced_persons" string="Search BCED" />
                     <field name="state" invisible="1"/>
                     <div attrs="{'invisible': [('state', '!=', 'candidate_bced')]}">
                         <field name="candidate_person_ids">
