--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -30,10 +30,10 @@
                     <div class="container" style="margin-left:0px;">
                         <div class="row">
                             <div class="col-8">
-                                <h2>
-                                    <field name="student_id" readonly="1"/>
-                                </h2>
                                 <group>
+                                    <field name="student_lastname" readonly="1"/>
+                                    <field name="student_firstname" readonly="1"/>
+                                    <field name="student_birthdate" readonly="1"/>
                                     <field name="student_niss" readonly="1"/>
                                 </group>
                             </div>
