swithc to searchName

--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -33,7 +33,7 @@
                                 <group>
                                     <field name="student_lastname" readonly="1"/>
                                     <field name="student_firstname" readonly="1"/>
-                                    <field name="student_birthdate" readonly="1"/>
+                                    <field name="student_birthdate_date" readonly="1"/>
                                     <field name="student_niss" readonly="1"/>
                                 </group>
                             </div>
