--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -31,6 +31,7 @@
                         <div class="row">
                             <div class="col-8">
                                 <group>
+                                    <field name="student_id" invisible="1"/>
                                     <field name="student_lastname" readonly="1"/>
                                     <field name="student_firstname" readonly="1"/>
                                     <field name="student_birthdate_date" readonly="1"/>
