swithc to searchName

--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -44,7 +44,7 @@
                     <field name="state" invisible="1"/>
                     <div attrs="{'invisible': [('state', '!=', 'candidate_bced')]}">
                         <field name="candidate_person_ids">
-                            <tree>
+                            <tree create="false" delete="false">
                                 <field name="lastname"/>
                                 <field name="firstname"/>
                                 <field name="birthdate"/>
