--- a/school_webservices/views/configuration_view.xml
+++ b/school_webservices/views/configuration_view.xml
@@ -87,5 +87,6 @@
         <field name="act_window_id" ref="action_webservice_list" />
     </record>
     
-    <menuitem id="menu_webservice_list" parent="school_management.menu_school_admin" action="action_webservice_list" sequence="40" />
+    <menuitem id="menu_webservice" name="Web Services" sequence="100" web_icon="school_webservices,static/description/icon.png" />
+    <menuitem id="menu_webservice_list" parent="menu_webservice" action="action_webservice_list" sequence="40" />
 </odoo>
