--- a/school_webservices_bced_personne/views/bced_inscription_view.xml
+++ b/school_webservices_bced_personne/views/bced_inscription_view.xml
@@ -72,8 +72,32 @@
         </field>
     </record>
 
+    <!-- a menu action for the school.bced.inscription model -->
+    <record id="action_bced_inscription" model="ir.actions.act_window">
+        <field name="name">BCED Inscriptions</field>
+        <field name="res_model">school.bced.inscription</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- a view action for the school.bced.inscription tree view -->
+    <record id="action_bced_inscription_tree" model="ir.actions.act_window.view">
+        <field name="sequence" eval="10"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="view_bced_inscription_tree"/>
+        <field name="act_window_id" ref="action_bced_inscription"/>
+    </record>
+
+    <!-- a view action for the school.bced.inscription form view -->
+    <record id="action_bced_inscription_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="20"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="view_bced_inscription_form"/>
+        <field name="act_window_id" ref="action_bced_inscription"/>
+    </record>
+
     <!-- a menu item for the school.bced.inscription model -->
 
-    <menuitem id="menu_bced_inscription" name="BCED Inscriptions" parent="school_webservices.menu_webservice" sequence="60" groups="school_webservices_bced_personne.bced_allowed_group"/>
+    <menuitem id="menu_bced_inscription" name="BCED Inscriptions" parent="school_webservices.menu_webservice" sequence="60" groups="school_webservices_bced_personne.bced_allowed_group" action="action_bced_inscription" />
 
 </odoo>
