add test for inscription

--- a/school_webservices_bced_personne/views/bced_inscription_view.xml
+++ b/school_webservices_bced_personne/views/bced_inscription_view.xml
@@ -29,6 +29,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="action_submit" string="Publish" type="object" class="oe_highlight"/>
                     <button name="action_revoke" string="Revoke" type="object" class="oe_highlight"/>
                 </header>
                 <sheet>
