--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -93,7 +93,8 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
-                <button name="%(action_bced_personne_view)d" type="action"
+                <field name='inscription_id' invisible='1'/>
+                <button name="%(action_bced_personne_view)d" type="action" attrs="{'invisible': [('inscription_id', '!=', False)]}"
                         class="oe_stat_button" icon="fa-address-book" groups="school_webservices_bced_personne.bced_allowed_group">BCED</button>
             </xpath>
         </field>
