--- a/school_management/views/res_partner_view.xml
+++ b/school_management/views/res_partner_view.xml
@@ -207,6 +207,7 @@
             				    <field name="lang"/>
             				    <field name='gender' />
                                 <!--<field name='nationality_id' />-->
+                                <field name='nationality_ids' widget="many2many_tags"/>
                                 <field name="birthplace"/>
                                 <field name="birthdate_date"/>
                                 <field name="reg_number" />
