swith to nationalities

--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -93,8 +93,8 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
-                <field name='inscription_ids' invisible='1'/>
-                <button name="%(action_bced_personne_view)d" type="action" attrs="{'invisible': [('inscription_ids', '!=', False)]}"
+                <field name='inscription_count' invisible='1'/>
+                <button name="%(action_bced_personne_view)d" type="action" attrs="{'invisible': [('inscription_count', '>', 0)]}"
                         class="oe_stat_button" icon="fa-search" groups="school_webservices_bced_personne.bced_allowed_group">BCED</button>
             </xpath>
         </field>
