--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -57,22 +57,29 @@
                         <div class="alert alert-info" role="alert">
                             <strong>Great!</strong> This student has a record in BCED.
                         </div>
-                        <group>
-                            <span>By clicking on the button below, we will register to the BCED for the use of this file.
-                            The student will be linked to the BCED record and its information updated accordingly. An update of the information, is perfromed on a weekly basis.</span>
+                        <div>
+                            <span>
+                                By clicking on the button below, we will register to the BCED for the use of this file.
+                                The student will be linked to the BCED record and its information updated accordingly. An update 
+                                of the information, is perfromed on a weekly basis.
+                            </span>
                             <div class="alert alert-warning" role="alert">
-                                Be aware that you should be authorized to make use of this information and that all usage of BCED data and services is under strict regulation and is logged for use control.
+                                Be aware that you should be authorized to make use of this information and that all usage of 
+                                BCED data and services is under strict regulation and is logged for use control.
                             </div>
-                        </group>
+                        </div>
                         <button name="action_link_bced_personne" string="Link to BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
                     </div>
                     <div attrs="{'invisible': [('state', '!=', 'no_bced')]}">
                         <div class="alert alert-warning" role="alert">
                             <strong>Warning!</strong> This student has no record in BCED.
                         </div>
-                        <group>
-                            <span>By clicking on the button below, a new record will be created in BCED and the numero bis will be used for the student.</span>
-                        </group>
+                        <div>
+                            <span>
+                                By clicking on the button below, a new record will be created in BCED and the numero bis will 
+                                be used for the student.
+                            </span>
+                        </div>
                         <button name="action_create_bced_personne" string="Create BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
                     </div>
                 </sheet>
