--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -68,6 +68,9 @@
                                 BCED data and services is under strict regulation and is logged for use control.
                             </div>
                         </div>
+                        <group>
+                           <field name="legal_context">
+                        </group>
                         <button name="action_link_bced_personne" string="Link to BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
                     </div>
                     <div attrs="{'invisible': [('state', '!=', 'no_bced')]}">
