--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <group>
-                           <field name="legal_context">
+                           <field name="legal_context"/>
                         </group>
                         <button name="action_link_bced_personne" string="Link to BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
                     </div>
