--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -53,25 +53,28 @@
                             </tree>
                         </field>
                     </div>
-                    <div attrs="{'invisible': [('state', '!=', 'bced')]}">
+                    <div attrs="{'invisible': [('state', '!=', 'bced')]}" class="border p-4">
                         <div class="alert alert-info" role="alert">
                             <strong>Great!</strong> This student has a record in BCED.
                         </div>
-                        <div>
-                            <span>
-                                By clicking on the button below, we will register to the BCED for the use of this file.
-                                The student will be linked to the BCED record and its information updated accordingly. An update 
-                                of the information, is perfromed on a weekly basis.
-                            </span>
-                            <div class="alert alert-warning" role="alert">
-                                Be aware that you should be authorized to make use of this information and that all usage of 
-                                BCED data and services is under strict regulation and is logged for use control.
-                            </div>
+                        <div class="mb-2">
+                            <span>Please provide the legal context you will make use of the information provided by BCED.</span>
                         </div>
                         <group>
                            <field name="legal_context"/>
                         </group>
-                        <button name="action_link_bced_personne" string="Link to BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
+                        <div>
+                            <span class="mb-2">
+                                By clicking on the button below, we will register to the BCED for the use of this file.
+                                The student will be linked to the BCED record and its information updated accordingly. An update 
+                                of the information, is perfromed on a weekly basis.
+                            </span>
+                            <button name="action_link_bced_personne" string="Link to BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
+                        </div>
+                        <div class="alert alert-warning" role="alert">
+                            Be aware that you should be authorized to make use of this information and that all usage of 
+                            BCED data and services is under strict regulation and is logged for use control.
+                        </div>
                     </div>
                     <div attrs="{'invisible': [('state', '!=', 'no_bced')]}">
                         <div class="alert alert-warning" role="alert">
