--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -80,13 +80,20 @@
                         <div class="alert alert-warning" role="alert">
                             <strong>Warning!</strong> This student has no record in BCED.
                         </div>
-                        <div>
+                        <group>
+                           <field name="legal_context"/>
+                        </group>
+                        <div class="mb-2">
                             <span>
                                 By clicking on the button below, a new record will be created in BCED and the numero bis will 
                                 be used for the student.
                             </span>
                         </div>
                         <button name="action_create_bced_personne" string="Create BCED Personne" type="object" default_focus="1" class="oe_highlight"/>
+                        <div class="alert alert-warning mt-2" role="alert">
+                            Be aware that you should be authorized to make use of this information and that all usage of 
+                            BCED data and services is under strict regulation and is logged for use control.
+                        </div>
                     </div>
                 </sheet>
                 <footer>
