--- a/school_management/views/res_partner_view.xml
+++ b/school_management/views/res_partner_view.xml
@@ -55,6 +55,7 @@
                             <field name="category_id" widget="many2many_tags" placeholder="Tags..."/>
                             <field name="user_ids" invisible="1"/>
                             <field name="email" widget="email" placeholder="Email"/>
+                            <field name="lang" placeholder="Language"/>
                         </group>
                         <div class="oe_edit_only">
             		        <group>
