--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -52,8 +52,8 @@
                                 <button type="object" icon="fa-folder-open" name="action_use_person" string="" />
                             </tree>
                         </field>
-                        <div class="alert alert-warning mt-2 mb-2" role="alert">
-                            This will continue to create a Bis entry in BCED. Please check the information provided by the student.
+                        <div>
+                            If none of those entries match the student, please click on the button below to create a new entry to obtain a bis number.
                         </div>
                         <button name="action_no_bced_personne" string="Not Found..." type="object" default_focus="1" class="oe_highlight"/>
                     </div>
