--- a/school_webservices_bced_personne/wizard/bced_personne.xml
+++ b/school_webservices_bced_personne/wizard/bced_personne.xml
@@ -40,6 +40,7 @@
                             </div>
                         </div>
                     </div>
+                    <separator/>
                     <field name="state" invisible="1"/>
                     <div attrs="{'invisible': [('state', '!=', 'draft')]}">
                         <button type="object" icon="fa-search" name="action_retrieve_bced_persons" string="Search BCED" />
